--- a/Services/Catalog/Course.Services.Catalog/appsettings.json
+++ b/Services/Catalog/Course.Services.Catalog/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "CatalogDB",
+    "CourseCollectionName": "Courses",
+    "CategoryCollectionName": "Categories"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
