Redis Repository and Basket Service added

--- a/Services/Basket/Course.Services.Basket/Course.Services.Basket.csproj
+++ b/Services/Basket/Course.Services.Basket/Course.Services.Basket.csproj
@@ -13,4 +13,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Course.Shared\Course.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
