Identity Server Create Tokens

--- a/Course.Services.Identity/appsettings.json
+++ b/Course.Services.Identity/appsettings.json
@@ -1,6 +1,12 @@
-{
+﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=IdentityDb; User=sa; Password=123123"
+  },
+  "TokenOptions": {
+    "Audience": "Course.Identity",
+    "Issuer": "Course.Identity",
+    "AccessTokenExpiration": 1440,
+    "SecurityKey": "itsMySecretkeyForGenereteTokenAndItmustbesostrong"
   },
   "Logging": {
     "LogLevel": {
