identity migratiion issue

--- a/Course.Services.Identity/appsettings.json
+++ b/Course.Services.Identity/appsettings.json
@@ -1,6 +1,13 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=IdentityDb; User=sa; Password=123123"
+    "DefaultConnection": "Server=localhost,1433;Database=IdentityDb; User=sa; Password=1907abcdXX@"
+  },
+  "Data": {
+    "RootUser": {
+      "username": "mustafa.findik3@gmail.com",
+      "email": "mustafa.findik3@gmail.com",
+      "password": "1234abcdXX@"
+    }
   },
   "TokenOptions": {
     "Audience": "Course.Identity",
