--- a/Course.Services.Identity/Course.Services.Identity.csproj
+++ b/Course.Services.Identity/Course.Services.Identity.csproj
@@ -19,4 +19,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Course.Shared\Course.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
