Basket Service Finished

--- a/Services/Basket/Course.Services.Basket/appsettings.json
+++ b/Services/Basket/Course.Services.Basket/appsettings.json
@@ -3,6 +3,11 @@
     "Host": "localhost",
     "Port": 6379
   },
+  "TokenOptions": {
+    "Audience": "Course.Identity",
+    "Issuer": "Course.Identity",
+    "SecurityKey": "itsMySecretkeyForGenereteTokenAndItmustbesostrong"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
