--- a/Services/Identity/Course.Services.Identity/Course.Services.Identity.csproj
+++ b/Services/Identity/Course.Services.Identity/Course.Services.Identity.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Course.Shared\Course.Shared.csproj" />
+    <ProjectReference Include="..\..\..\Shared\Course.Shared\Course.Shared.csproj" />
   </ItemGroup>
 
 </Project>
