Discont with Token

--- a/Services/Discount/Course.Services.Discount/appsettings.json
+++ b/Services/Discount/Course.Services.Discount/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "PostgreSql": "User ID=admin; Password=123123; Server=localhost; Port=5432;Database=discountdb;Integrated Security=true;Pooling=true"
   },
+  "TokenOptions": {
+    "Audience": "Course.Identity",
+    "Issuer": "Course.Identity",
+    "SecurityKey": "itsMySecretkeyForGenereteTokenAndItmustbesostrong"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
