--- a/Services/PhotoStock/Course.Services.PhotoStock/Course.Services.PhotoStock.csproj
+++ b/Services/PhotoStock/Course.Services.PhotoStock/Course.Services.PhotoStock.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Course.Shared\Course.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
