--- a/Services/Order/Course.Services.Order.API/Course.Services.Order.API.csproj
+++ b/Services/Order/Course.Services.Order.API/Course.Services.Order.API.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Course.Services.Order.Application\Course.Services.Order.Application.csproj" />
+  </ItemGroup>
+
 </Project>
