--- a/Services/Order/Course.Services.Order.Infrastructure/Course.Services.Order.Infrastructure.csproj
+++ b/Services/Order/Course.Services.Order.Infrastructure/Course.Services.Order.Infrastructure.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Course.Services.Order.Domain\Course.Services.Order.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
