added İnfrastracture and Doman Library

--- a/Services/Order/Course.Services.Order.API/appsettings.json
+++ b/Services/Order/Course.Services.Order.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=OrderDb; User=sa; Password=1907abcdXX@"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
