--- a/Services/Order/Course.Services.Order.Application/Course.Services.Order.Application.csproj
+++ b/Services/Order/Course.Services.Order.Application/Course.Services.Order.Application.csproj
@@ -6,9 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Course.Shared\Course.Shared.csproj" />
     <ProjectReference Include="..\Course.Services.Order.Domain\Course.Services.Order.Domain.csproj" />
     <ProjectReference Include="..\Course.Services.Order.Infrastructure\Course.Services.Order.Infrastructure.csproj" />
   </ItemGroup>
