Order Test Finisj and Token added

--- a/Services/Order/Course.Services.Order.API/appsettings.json
+++ b/Services/Order/Course.Services.Order.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=OrderDb; User=sa; Password=1907abcdXX@"
   },
+  "TokenOptions": {
+    "Audience": "Course.Identity",
+    "Issuer": "Course.Identity",
+    "SecurityKey": "itsMySecretkeyForGenereteTokenAndItmustbesostrong"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
