fake Payment added

--- a/Services/Payment/Course.Services.Payment/appsettings.json
+++ b/Services/Payment/Course.Services.Payment/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "TokenOptions": {
+    "Audience": "Course.Identity",
+    "Issuer": "Course.Identity",
+    "SecurityKey": "itsMySecretkeyForGenereteTokenAndItmustbesostrong"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
