--- a/UI/Course.UI/appsettings.json
+++ b/UI/Course.UI/appsettings.json
@@ -1,4 +1,27 @@
 {
+  "ServiceApiSettings": {
+    "IdentityBaseUri": "http://localhost:5000",
+    "GatewayBaseUri": "http://localhost:4000",
+    "PhotoStockUri": "http://localhost:5002",
+    "Catalog": {
+      "Path": "services/catalog/"
+    },
+    "PhotoStock": {
+      "Path": "services/photostock/"
+    },
+    "Basket": {
+      "Path": "services/basket/"
+    },
+    "Discount": {
+      "Path": "services/discount/"
+    },
+    "Payment": {
+      "Path": "services/fakepayment/"
+    },
+    "Order": {
+      "Path": "services/order/"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
